<resources>
    <string name="app_name">PAB_android_projek_aset</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_bluprint">Bluprint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluprint">Bluprint</string>
    <string name="menu_lahan">Lokasi Kepemilikan Lahan</string>
    <string name="nama_tabel">Lahan</string>
    <string name="lokasi_lahan">Lokasi Lahan</string>
    <string name="status_kepemilikan">Status Kepemilikan</string>
    <string name="penggunaan_lahan">Penggunaan Lahan</string>
    <string name="luas_lahan">Luas Lahan</string>
    <string name="total">Total</string>
    <string name="detail">Detail</string>
    <string name="lokasi">...</string>
    <string name="Status">...</string>
    <string name="Penggunaan">...</string>
    <string name="luas">...</string>
    <string-array name="data_lokasi">
        <item>Karanganyar</item>
        <item>Solo</item>
        <item>Surakarta</item>
        <item>Surakarta</item>
        <item>Surakarta</item>
        <item>Surakarta</item>
        <item>Surakarta</item>
    </string-array>
    <string-array name="data_status">
        <item>Owned</item>
        <item>Rented</item>
        <item>Government</item>
        <item>Government</item>
        <item>Government</item>
        <item>Government</item>
        <item>Government</item>
    </string-array>
    <string-array name="data_penggunaan">
        <item>Agricultural</item>
        <item>Residential</item>
        <item>Commercial</item>
        <item>Commercial</item>
        <item>Commercial</item>
        <item>Commercial</item>
        <item>Commercial</item>
    </string-array>
    <string-array name="data_luas">
        <item>1000 m²</item>
        <item>500 m²</item>
        <item>1500 m²</item>
        <item>1500 m²</item>
        <item>1500 m²</item>
        <item>1500 m²</item>
        <item>1500 m²</item>
    </string-array>
    <string-array name="data_nama_prasarana">
        <item>Tanah</item>
        <item>Peralatan dan Mesin</item>
        <item>Gedung dan Bangunan</item>
        <item>Jalan dan Jembatan</item>
        <item>Irigasi</item>
    </string-array>
    <string-array name="data_jenis_prasarana">
        <item>Tanah Hak Milik</item>
        <item>Mesin Berat</item>
        <item>Gedung Baru</item>
        <item>Jalan Baru</item>
        <item>Jalur Irigasi</item>
    </string-array>
    <string-array name="data_deskripsi_prasarana">
        <item>Lorem ipsum dolor sit amet</item>
        <item>Lorem ipsum dolor sit amet</item>
        <item>Lorem ipsum dolor sit amet</item>
        <item>Lorem ipsum dolor sit amet</item>
        <item>Lorem ipsum dolor sit amet</item>
    </string-array>
    <string-array name="data_jumlah_unit">
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
    </string-array>
    <string-array name="tahun_array">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>
</resources>