<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_akhir_pab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_aset"
        android:name="com.example.project_akhir_pab.ui.aset.AsetFragment"
        android:label="Aset"
        tools:layout="@layout/fragment_aset" />
    <action
        android:id="@+id/action_asetFragment_to_tabelDataGedungFragment"
        app:destination="@id/nav_tabel_data_gedung" />
    <action
        android:id="@+id/action_asetFragment_to_tabelDataTanahFragment"
        app:destination="@id/nav_tabel_data_tanah" />

<!--    Navigation Blueprint-->
    <fragment
        android:id="@+id/nav_blueprint"
        android:name="com.example.project_akhir_pab.ui.blueprint.BlueprintFragment"
        android:label="Blueprint"
        tools:layout="@layout/fragment_blueprint" >
        <action
            android:id="@+id/action_blueprintFragment_to_jaringanFragment"
            app:destination="@id/jaringanFragment" />
        <action
            android:id="@+id/action_blueprintFragment_to_networkFragment"
            app:destination="@id/networkFragment" />
    </fragment>
    <fragment
        android:id="@+id/jaringanFragment"
        android:name="com.example.project_akhir_pab.ui.blueprint.JaringanFragment"
        android:label="Jaringan-Interkoneksi" />
    <fragment
        android:id="@+id/networkFragment"
        android:name="com.example.project_akhir_pab.ui.blueprint.NetworkFragment"
        android:label="Alat NOC" />

<!--    -->
    <fragment
        android:id="@+id/nav_prasarana1"
        android:name="com.example.project_akhir_pab.ui.prasarana.Prasarana1Fragment"
        android:label="Prasarana 1"
        tools:layout="@layout/fragment_prasarana1" />
    <fragment
        android:id="@+id/nav_prasarana2"
        android:name="com.example.project_akhir_pab.ui.prasarana.Prasarana2Fragment"
        android:label="Prasarana Tambahan"
        tools:layout="@layout/fragment_prasarana2" >
        <action
            android:id="@+id/action_nav_prasarana2_to_detailPrasarana2"
            app:destination="@id/detailPrasarana2" />
    </fragment>

    <fragment
        android:id="@+id/nav_lahan"
        android:name="com.example.project_akhir_pab.ui.lahan.LahanFragment"
        android:label="@string/menu_lahan"
        tools:layout="@layout/fragment_lahan" >
        <action
            android:id="@+id/action_nav_lahan_to_detailLahanFragment"
            app:destination="@id/detailLahanFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_tabel_data_gedung"
        android:name="com.example.project_akhir_pab.ui.aset.TabelDataGedungFragment"
        android:label="Tabel Data Gedung"
        tools:layout="@layout/fragment_tabel_data_gedung" />
    <fragment
        android:id="@+id/nav_tabel_data_tanah"
        android:name="com.example.project_akhir_pab.ui.aset.TabelDataTanahFragment"
        android:label="Tabel Data Tanah"
        tools:layout="@layout/fragment_tabel_data_tanah" />

    <fragment
        android:id="@+id/detailLahanFragment"
        android:name="com.example.project_akhir_pab.ui.lahan.DetailLahanFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail_lahan" />

    <fragment
        android:id="@+id/detailPrasarana2"
        android:name="com.example.project_akhir_pab.ui.prasarana.DetailPrasarana2"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail_prasarana2" />
</navigation>
